# ai-sports-travel-planner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  PROJECT.md  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: backfill-historical-weather.yml  catalog-acquisition.yml  ci.yml  deploy.yml  reconcile-recent-archive.yml  refresh-conditions.yml
app/: main.py  public_pages.py
app/ai/: __init__.py  gemini_client.py  llm_client.py  narrative.py  parser.py
app/api/: routes.py
app/auth/: google.py
app/config/: __init__.py  env.py
app/data/: backfill_historical_weather.py  bootstrap_database.py  conditions_loader.py  correct_raw_weather_record_types.py  database.py  loader.py  reconcile_recent_archive.py  resorts.json  (+4 more)
docs/: data-trust-model.md  engineering-notes.md  planning-model.md  portfolio-plan.md  production-runbook.md  sprint-17-resort-audit-results.md  sprints-17-19-claude-old.md  sprints-17-19-old.md  sprints-17-19.md  strategy.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.tsbuildinfo  vite.config.js  vitest.config.js  vitest.config.ts
mobile/: README.md  pubspec.yaml
scripts/: run-built-app.sh
tests/: conftest.py  test_api.py  test_catalog_validation.py  test_conditions.py  test_env.py  test_golden_recommendations.py  test_loader.py  test_narrative.py  test_open_meteo.py  test_parser.py  test_planning.py  test_public_pages.py  test_repository.py  test_resort_acquisition.py  test_seed_data.py  test_services.py
(+61 files in other folders)
