[project]
name = "ai-sports-travel-planner"
version = "0.1.0"
description = "Minimal FastAPI backend for sports activity recommendations"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "pydantic>=2.11,<3.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.2,<5.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
  "httpx>=0.28,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
